# ai-penguins

./: .env.example  .gitmodules
godot/: export_presets.cfg  icon.svg.import  project.godot  rust.gdextension
godot/Assets/: realistic_central_park_zoo_city_scape.jpeg.import
godot/Assets/Models/: kowalski.blend1  kowalski.glb  kowalski.glb.import  lamp_post.glb  lamp_post.glb.import  park_floor.blend  park_floor.blend.import  park_floor.blend1  penguin_enc.blend  penguin_enc.blend.import  penguin_enc.blend1  penguin_enc.mtl  private.blend1  private.glb  private.glb.import  rico.blend1  rico.glb  rico.glb.import  skipper.blend1  skipper.glb  skipper.glb.import  uploads_files_4166987_panou-gard-pe-rotund-intors.fbx
godot/Assets/Shaders/: water.gdshader
godot/Assets/Textures/: concrete_tex.avif  concrete_tex.png.import  hex_floor_tex.jpg.import
godot/Scenes/: 3d_scene.tscn  console_window.tscn  main_scene.tscn  voice_line_container.tscn
godot/Scripts/: buoyant_body.gd  camera.gd  characters.gd  console_window_manager.gd  dialogue_creation_manager.gd  dialogue_speech_generation.gd  dialogue_text_generation.gd  moving_character.gd  penguins.gd  presentation_executor.gd  presentation_manager.gd  prompt_creation_helper.gd  save_load_manager.gd  talking_character.gd  wander_area.gd
godot/UI/: section_label_settings.tres
rust/: Cargo.toml
rust/src/: constants.rs  dialogue_characters.rs  dialogue_instance.rs  lib.rs  local_llm_client.rs  parsed_dialogue_instance.rs  text_ai_executor.rs  tts_api_client.rs  tts_api_client_uberduck.rs  tts_executor.rs
(+54 files in other folders)
