[package]
name = "ai-penguins"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-threads"] }
rust-llm-server-common = { git = "https://github.com/gzhynko/rust-llm-server" }
rand = "0.8.5"
message-io = "0.18.1"
bincode = "1.3.1"
fakeyou = { path = "external/fakeyou.rs" }
bytes = "1.4.0"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = "1.0.163"
serde_json = "1.0.96"
dotenvy = "0.15.7"
